--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -30,21 +30,18 @@ webdriver {
 
 environments {
   default {
-    webdriver.base.url = "https://demoqa.com/"
+    webdriver.base.url = "https://www.demoblaze.com/"
   }
-   default {
-        webdriver.map.url = "https://www.demoblaze.com/"
-      }
 }
 
 #crentials encoding - Recommendation: Use time-bound credentials
 
 credentials {
   default {
-    user.name = "Test"
+    user.name = "moisecas32"
   }
   default {
-    pass = "c2VjcmV0X3NhdWNl"
+    pass = "123456"
   }
 }
 
