--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ target/
 build/
 !/.mvn/wrapper/gradle-wrapper.jar
 
+# Excluir el archivo de propiedades de credenciales
+/credentials.properties
+
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
