--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -30,7 +30,7 @@ webdriver {
 
 environments {
   default {
-    webdriver.base.url = "https://www.demoblaze.com/"
+    webdriver.base.url = "https://opencart.abstracta.us/"
   }
 }
 
